<?xml version="1.0"?>
<package format="3">
  <name>pinky_rmf</name>
  <version>0.0.0</version>
  <description>Goal pose listener for Nav2</description>
  <maintainer email="pinky@todo.todo">pinky</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
