<?xml version="1.0"?>
<package format="3">
  <name>mapf_planner</name>
  <version>0.0.0</version>
  <description>Multi-agent A* planner</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 의존성 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
