<?xml version="1.0"?>
<package format="3">
  <name>send_goal</name>
  <version>0.0.0</version>
  <description>Send FollowWaypoints action goals to Nav2</description>
  <maintainer email="jewoo@todo.todo">jewoo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
